assets/css/style.css
/* Import fonts */

@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600&display=swap");

/* General setting for body content */

body {
    color: #ffffff;
    font-family: "Source Sans Pro", sans-serif;
    font-weight: 400;
    font-size: 1.1rem;
    padding-top: 100px;
}

.container-fluid {
    margin: 0;
    padding: 0;
    overflow: hidden;
}

/* SPINNER */

/* Spinner on data loading
spinner animation found on CodePen: https://codepen.io/judecodes/pen/PrBOvG?&page=1 */

.loader {
    z-index: 99;
    width: 200px;
    height: 200px;
    border-radius: 50%;
    border-top: 2px solid #00bc66;
    border-bottom: 2px solid transparent;
    border-left: 2px solid transparent;
    border-right: 2px solid transparent;
    animation: spin 3s linear infinite forwards;

    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
}

.loader::before,
.loader::after {
    content: "";
    position: absolute;
    border-radius: 50%;
    border-top: 2px solid #00bc66;
    border-bottom: 2px solid transparent;
    border-left: 2px solid transparent;
    border-right: 2px solid transparent;
}

.loader::before {
    top: 7px;
    left: 7px;
    width: 178px;
    height: 178px;
    border-top: 2px solid #c1dccb;
    animation: spin 2s linear infinite forwards;
}

.loader::after {
    top: 16px;
    left: 16px;
    width: 160px;
    height: 160px;
    border-top: 2px solid #32713d;
    animation: spin 1s linear infinite forwards;
}

@keyframes spin {
    to {
        transform: rotate(360deg);
    }
}

/* Overlay styled to dim the background for spinner */

#overlay {
    z-index: 98;
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: rgba(0, 0, 0, .5);
}

/* SEPARATORS */

.separator {
    background-color: #00bc66;
    margin: 0;
    height: 20px;
}

/* NAVBAR */

/* Navbar logo styling */

.navbar-brand img {
    width: 100%;
    height: 80%;
}

.navbar-brand {
    margin: 0;
}

/* Navbar padding removed to apply bootstrap classes */

.navbar {
    padding: 0;
    background-color: #222222;
}

/* Navbar */

.navbar-nav .nav-link {
    color: #9d9d9d;
    text-decoration: none;
    text-transform: uppercase;
    display: block;
    
}

.navbar-toggler {
    color: #9d9d9d;
}

.navbar-toggler:hover,
.navbar-nav .nav-link:hover {
    color: #ffffff;
}

#navbar-container {
    margin: auto;
}

/* Navbar menu button size increase */

.fa-bars {
    font-size: 2.5rem;
}

/* FILTERS SECTION */

#filters-container {
    background-color: #333333;
}

/* Edit select menu button look so it doesn't display default arrows and doesnt't round edges */

select {
    -webkit-border-radius: 0px;
    border-radius: 0px;
    -webkit-appearance: button;
    -moz-appearance: button;

    width: 45%;
    padding: 5px 0 5px 10px;
    border: 0 !important;

    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' aria-hidden='true' focusable='false' data-prefix='fas' data-icon='sort-down' class='svg-inline--fa fa-sort-down fa-w-10' role='img' viewBox='0 0 320 650'><path fill='white' d='M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z'/></svg>") no-repeat;
    background-size: 15px;
    background-position: calc(100% - 10px) center;
    background-repeat: no-repeat;

}

/* Display label above input */

select,
label {
    display: block;
}

select {
    margin: auto;
}

/* Set label and reset button text to uppercase */

label,
#reset-button {
    text-transform: uppercase;
}

/* City input font size changed */

input {
    font-size: 20px;
}

/* Reset button container */

#reset-container {
    background-color: #333333;
    padding: 0;
}

/* Styling for buttons */

.button {
    color: #fff;
    background-color: #00bc66;
    border: none;
}

.button:hover {
    background-color: #00703c;
}

#reset-button {
    color: #fff;
    background-color: #222222;
    border: none;
    padding: 10px 60px;
}

#reset-button:hover {
    background-color: #00bc66;
}

/* Swich of frame on focus and change color for input focus */

.button:focus,
.navbar-toggler:focus {
    outline: none;
}

input:focus {
    outline-color: #00bc66;
}

/* MAP */

/* Map size */

#map {
    height: 600px;
    width: 450px;
    box-shadow: 10px 10px 5px -8px rgba(34, 34, 34, 1);
}

#map-container {
    background-color: #f6f7f6;
}

/* Information pop up styling */

#info-content,
#info-content a {
    color: #474b4e;
}


/* RESULTS SECTION */

#results-container {
    background-color: #f6f7f6;
}

/* Set cursor to pointer for table content and buttons */

#resultsTable,
.button {
    cursor: pointer;
}

/* Centering table in a div */

#resultsTable {
    width: 80%;
    margin: auto;
    font-weight: 300;
    color: #ffffff;
}

/* Styling heading for the results table */

h1,
h2 {
    font-size: 1.8rem;
    font-weight: 600;
    text-transform: uppercase;
}

h2 {
    color: #00bc66;
}

td {
    cursor: pointer;
}

/* FOOTER */

/* Footer background */

footer {
    background-color: #333333;
}

/* Footer links styling */

.copyrights a {
    color: #f6f7f6;
}

.copyrights a:hover {
    color: #00bc66;
    text-decoration: none;
}

/* Margin between social media links */

.list-inline-item:not(:last-child) {
    margin-right: 2rem;
}

/* Social media icons styling*/

.list-inline-item .fa {
    font-size: 1.4rem;
    color: #f6f7f6;
    display: inline-block;
    padding: 10px;
    line-height: 1;
    text-decoration: none;
    background-color: #222222;
}

.list-inline-item .fa:hover {
    background-color: #00bc66;
}

/* BACK TO TOP BUTTON */

/* Back to top button inspired by this Codepen solution: https://codepen.io/matthewcain/pen/ZepbeR */

#button {
    display: inline-block;
    background-color: transparent;
    color: #00bc66;
    border: 1px solid #00bc66;
    width: 50px;
    height: 50px;
    text-align: center;
    border-radius: 3px;
    position: fixed;
    bottom: 30px;
    right: 30px;
    transition: background-color .3s,
    opacity .5s, visibility .5s;
    opacity: 0;
    visibility: hidden;
    z-index: 97;
}

#button::after {
    content: "\f077";
    font-family: FontAwesome;
    font-weight: normal;
    font-style: normal;
    font-size: 2em;
    line-height: 50px;
}

#button:active {
    background-color: #00bc66;
    color: #ffffff;
    border: none;
}

#button.show {
    opacity: 1;
    visibility: visible;
}

/* MEDIA QUERIES */

/* Media queries to deal with select menu button and navbar / footer separator */

@media only screen and (max-width: 1200px) {

    nav,
    footer {
        margin: 0 60px;
    }

    select {
        width: 60%;
    }

}


@media only screen and (max-width: 992px) {

    select {
        width: 80%;
    }

}

@media only screen and (max-width: 768px) {

    select {
        width: 80%;
    }

}

@media only screen and (max-width: 750px) {

    nav,
    footer {
        margin: 0 30px;
    }

    select {
        width: 35%;
    }

    /* Padding adjusted to accommodate fixed navbar on smaller displays */
    body {
        padding-top: 150px
    }

}

@media only screen and (max-width: 576px) {

    select {
        width: 40%;
    }

    .navbar-nav .nav-link {
        text-align: center;
    }

}



@media only screen and (max-width: 425px) {

    select {
        width: 50%;
    }

}

@media only screen and (max-width: 375px) {

    select {
        width: 70%;
    }

    #resultsTable {
        font-size: 0.9rem;
    }

}

/* Solution to sticky hover on mobile devices found here: https://medium.com/@ferie/detect-a-touch-device-with-only-css-9f8e30fa1134 */

@media (hover: hover) {

    #button:hover {
        cursor: pointer;
        background-color: #00bc66;
        color: #ffffff;
        border: none;
    }

}

